<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources[
    <!ENTITY host "http://58.27.220.110:201/">
    <!ENTITY lhost "http://192.168.10.11/">
    ]>
<resources>
    <string name="app_name">سوال</string>
    <string name="dbdir">&host;wa/DBScripts/</string>
    <string name="key2ph_url">&host;wa/DBScripts/keyToPh.php?key=</string>
    <string name="ph2key_url">&host;wa/DBScripts/phToKey.php?ph=</string>
    <string name="make_new_req">&host;/wa/DBScripts/phToKey.php?ph=</string>
    <string name="pq_base">&host;PQuiz/</string>
    <string name="pq_comments">Comments/</string>
    <string name="pq_recordings">Recordings/</string>
    <string name="pq_recordings_server_local">D:\xampp\htdocs\PQuiz\Recordings\</string>
    <string name="pq_prompts">Prompts/</string>
    <string name="pq_effects">Effects/</string>
    <string name="pq_feedback">Feedback/</string>
    <string name="pq_scripts">Scripts/</string>
    <string name="title_activity_tabbed_rankings">TabbedRankings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="description_logo">sawaal, jawaab</string>
    <string name="mm_new_questions">نئے سوالات</string>
    <string name="mm_post_question">سوال  پوچھيں</string>
    <string name="mm_user_profile">اپنی معلومات</string>
    <string name="mm_question_rank">پوزیشن : سوال</string>
    <string name="mm_answer_rank">پوزیشن : جواب</string>
    <string name="mm_friend_questions">دوستوں کے\n\n سوال</string>
    <string name="revisit_questions">سوالات دوبارہ سنیں</string>
    <string name="profile_total_answers">کل جوابات</string>
    <string name="profile_correct_answers">درست جوابات</string>
    <string name="please_wait">انتظار کریں</string>
    <string name="text_sawaal">سوال</string>
    <string name="text_comment">راۓ</string>
    <string name="text_jawaab_1">جواب \n# 1</string>
    <string name="text_jawaab_2">جواب \n# 2</string>
    <string name="text_jawaab_3">جواب \n# 3</string>
    <string name="text_jawaab_4">جواب \n# 4</string>
    <string name="submit_answer">جواب بھیج دیں</string>
    <string name="next_question">اگلا سوال</string>
    <string name="like">پسند</string>
    <string name="dislike">ناپسند</string>
    <string name="report">رپورٹ</string>
    <string name="new_comment">اپنی راۓ</string>
    <string name="user_comments">دوسروں کی راۓ</string>
    <string name="forward">ارسال کریں</string>
    <string name="nothing_here">ابھی کچھ موجود نہیں ہے</string>
    <string name="send_to_friend">دوست کو بھیجیں</string>
    <string name="enter_number_here">یہاں نمبر لکھیں</string>
    <string name="position">پوزیشن</string>
    <string name="forwarded_questions_title">دوستوں کو بھیجے گۓ سوالات</string>
    <string name="daily_title">روزانہ</string>
    <string name="weekly_title">ہفتہ وار</string>
    <string name="overall_title">ہمیشہ</string>
    <string name="qrec_prompt">سوال</string>
    <!--<string name="like"></string>-->
    <!--<string name="like"></string>-->
    <!--<string name="like"></string>-->

    <string name="rec_options_ur">جوابات</string>
    <string name="rec_correct_opt_ur">صحیح جواب</string>
    <string name="rec_submit_ur">سوال جمع کریں</string>

    <string name="option_1_ur">جواب # 1</string>
    <string name="option_2_ur">جواب # 2</string>
    <string name="option_3_ur">جواب # 3</string>
    <string name="option_4_ur">جواب # 4</string>


</resources>
