<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ForwardQuestion"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/send_to_friend"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fwd_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:hint="@string/enter_number_here"/>

        <Button
            android:id="@+id/fwd_submit"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/opt_grey_light"/>

        <ImageButton
            android:id="@+id/fwd_success"
            android:layout_marginTop="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/fwd_okay"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/fwd_error"
            android:layout_marginTop="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/fwd_error"
            android:visibility="gone"/>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_marginTop="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="LineSpinFadeLoaderIndicator"
            app:indicatorColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>