<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@color/opt_grey_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/qplaybutton"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="18sp" android:text=""
            android:padding="18dip" android:background="@drawable/ic_qplay_dark"/>
        <TextView
            android:id="@+id/opt1rec" android:text="#1"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="18dip"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/opt2rec" android:text="#2"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="18dip"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/opt3rec" android:text="#3"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="18dip"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/opt4rec" android:text="#4"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="18dip"
            android:textColor="@color/colorPrimary"/>
        <ImageButton
            android:id="@+id/rq_opt_button"
            android:layout_gravity="center|center_horizontal"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/rq_opt_icon"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rqopt"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:background="@color/opt_grey_dark"
        android:visibility="gone">
        <Button
            android:id="@+id/forward"
            android:layout_weight="1"
            android:textColor="@color/opt_grey_light"
            android:text="@string/forward"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/comment"
            android:layout_weight="1"
            android:textColor="@color/opt_grey_light"
            android:text="@string/new_comment"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/user_comments"
            android:layout_weight="1"
            android:textColor="@color/opt_grey_light"
            android:text="@string/user_comments"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

