<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@color/background_light">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_centerInParent="true">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="BallRotateIndicator"
            app:indicatorColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:id="@+id/profile_info_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/profile_total_answers"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/attempted"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:background="@drawable/rect_shape"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="0"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/profile_correct_answers"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/correct"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:background="@drawable/rect_shape"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="0"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/revisit_questions"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            android:text="@string/revisit_questions"
            android:theme="@style/PrimaryButton"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</RelativeLayout>